cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificExprsCheckLevel3.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
 - A cast expression from string is used:
   - In group "CAST_EXPRS_STRING_TO_BOOLEAN":
     - invariant not <bool>"false";
                     ^
   - In group "CAST_EXPRS_STRING_TO_INT":
     - invariant 1 = <int>"1";
                     ^
   - In group "CAST_EXPRS_STRING_TO_REAL":
     - invariant 1.0 = <real>"1.0";
                       ^
 - A cast expression to string is used:
   - In group "CAST_EXPRS_AUTOMATON_TO_STRING":
     - invariant "A" = <string>X;
                       ^
   - In group "CAST_EXPRS_BOOLEAN_TO_STRING":
     - invariant "true" = <string>true;
                          ^
   - In group "CAST_EXPRS_INT_TO_STRING":
     - invariant "1" = <string>1;
                       ^
   - In group "CAST_EXPRS_REAL_TO_STRING":
     - invariant "1.1" = <string>1.1;
                         ^
   - In location "X.A":
     - invariant "A" = <string>self;
                       ^
 - A standard library function reference is used:
   - In group "FUNC_CALLS":
     - invariant abs(1) = 1;
                 ^
   - In group "FUNC_REFS_STD_LIB":
     - invariant abs(1) = 1;
                 ^
 - A tuple field-projection expression is used:
   - In automaton "PROJECTION_EXPRS_TUPLES_FIELD":
     - edge tau do v[a] := v[b];
                    ^       ^
   - In group "TUPLE_FIELD_REFS_NAMED":
     - invariant c[a];
                  ^
 - A tuple index-projection expression is used:
   - In automaton "PROJECTION_EXPRS_TUPLES_FIELD":
     - edge tau do v[a] := v[b];
                    ^       ^
   - In group "PROJECTION_EXPRS_TUPLES_INDEX":
     - invariant (true, false)[0];
                              ^
     - invariant ((true, false), false)[0][0];
                                       ^  ^
   - In group "TUPLE_FIELD_REFS_NAMED":
     - invariant c[a];
                  ^
   - In group "TUPLE_FIELD_REFS_NAMELESS":
     - invariant (true, false)[0];
                              ^
   - In group "TUPLE_LITS":
     - invariant (true, false)[0];
                              ^
 - A user-defined function reference is used:
   - In group "FUNC_CALLS":
     - invariant intF(true);
                 ^
     - invariant extF(true);
                 ^
   - In group "FUNC_REFS_USER_DEF_EXT":
     - invariant f() = "a";
                 ^
   - In group "FUNC_REFS_USER_DEF_INT":
     - invariant f();
                 ^
   - In group "USER_DEF_FUNC_REFS":
     - invariant g(intF);
                 ^ ^
     - invariant g(extF);
                 ^ ^
